--- a/html/Recipe_HW.html
+++ b/html/Recipe_HW.html
@@ -2,10 +2,11 @@
 <h1>
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" type="text/css" href="recipe_style.css">
         <title>French Toast Recipe</title>
 </head>
     <body>
-        <div>
+        <div id="header">
             <center>
                 <h2 style = "color: blue">How to make French Toast</h2>
             </center>
@@ -37,7 +38,7 @@
                         </li>
                     </ul>
         </div>
-        <div><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <div class="instructions"><br><br><br><br><br><br><br><br><br><br><br><br>
     <h2>Instructions:</h2>
         <ol>
             <li>
